# nchess

./: .gitignore  CMakeLists.txt  build.sh  readme.md  run.sh
res/: board.txt
src/: env.cpp  env.h  file.cpp  file.h  log.h  main.cpp  piece.h  state.h  types.h  ui.cpp  ui.h  using.h  util.cpp  util.h  validate.h
src/model/: piece.h  state.cpp  state.h  types.h
src/ui/: colors.h  ui.cpp  ui.h
src/validation/: typevalidator.h  validate.cpp  validate.h
